Fix hero banner on small screens
With a font size significantly larger than the line height, the hero banner
(e.g. on the universal landing page) text was getting scrunched on small
screens. This patch accomplishes the same visual effect while scaling down to
small screens

--- a/atf_eregs/static/regulations/css/less/module/universal-landing.less
+++ b/atf_eregs/static/regulations/css/less/module/universal-landing.less
@@ -61,14 +61,14 @@
 .hero-header {
     .font-light;
     font-size: 2.75em;
-    line-height: 15px;
+    margin-top: .6em;
 }
 
 .hero-text {
     .font-regular;
     font-size: 1.375em;
     line-height: 31px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .read-more-link {
